--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/style.css" />
 
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/qr-code-styling@1.3.3/lib/qr-code-styling.js"
+    ></script>
     <script defer src="/build/bundle.js"></script>
   </head>
 
